# ANR

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/campaign/: README.md
data/inbox/: e001.json  e002.json  e003.json  e004.json  e005.json  e006.json  e007.json  e008.json
data/incidents/: inc-001.md  inc-002.md  inc-003.md  inc-004.md
data/inventory/: market_signals.json  snapshot.json
data/knowledge_base/: agent_mesh.md  audit_log_format.md  boundary_policies.md  cross_agency_a2a.md  declarative_envelope.md  hitl_patterns.md  hybrid_orchestrator.md  mcp_overview.md  native_vs_script_agents.md  permission_envelope.md  platform_initiated_hitl.md  reshape_kinds.md  resource_budgets.md  safety_invariants.md  spec_lifecycle.md  sub_agent_delegation.md  tool_kinds.md  visualizer_overview.md
data/suppliers/: sup-arc.md  sup-borealis.md  sup-helix.md  sup-meridian.md
docs/schema/: README.md  anr-spec-v0.json
examples/audits/: paper_alignment_audit.jsonl
scripts/: auto_approve.py  campaign.py  sanitize_artifact_paths.py  summarize_campaign.py
specs/: README.md  emergency_response.yaml  inbox_triage.yaml  research_assistant.yaml  supply_chain.yaml  supply_chain_agents.py
specs/prompts/: analytics.md  communication.md  coordinator.md  drafter.md  extractor.md  field_assessment.md  incident_commander.md  inventory_agent.md  logistics.md  procurement.md  procurement_director.md  researcher.md  triage.md  triager.md  writer.md
src/anr/: __init__.py  agent.py  agent_base.py  audit.py  cli.py  compiler.py  hitl.py  loader.py  mcp_client.py  mesh.py  (+5 more)
(+175 files in other folders)
